--- a/css/StylesOfertas.css
+++ b/css/StylesOfertas.css
@@ -44,13 +44,22 @@
 }
 
 
+
+@keyframes fadeUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
 @media (max-width: 768px) {
     .banner {
+            width: 90%;
+        margin-bottom: 2rem;
+
         flex: 1 1 100%;
         max-width: 100%;
     }
 
-    .banner img {
-        height: 180px;
-        /* un poco más bajo en mobile */
-    }
+}
