--- a/css/StylesEnvios.css
+++ b/css/StylesEnvios.css
@@ -3,6 +3,10 @@
     color: #fff;
     padding: 3rem 2rem;
     font-family: 'Orbitron', sans-serif;
+        border: 2px solid #0ff;
+    border-radius: 16px;
+    box-shadow: 0 0 20px #00fff2;
+    
 }
 
 .envios-container-dark {
