--- a/css/StylesOfertas.css
+++ b/css/StylesOfertas.css
@@ -1,6 +1,9 @@
 .ofertas {
     padding: 60px 40px;
     background-color: #111;
+    border: 2px solid #0ff;
+    border-radius: 16px;
+    box-shadow: 0 0 20px #00fff2;
 }
 
 .estilosTitulos {
@@ -46,16 +49,16 @@
 
 
 @keyframes fadeUp {
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 
 @media (max-width: 768px) {
     .banner {
-            width: 90%;
+        width: 90%;
         margin-bottom: 2rem;
 
         flex: 1 1 100%;
