--- a/css/StylesVentaCorpo.css
+++ b/css/StylesVentaCorpo.css
@@ -1,10 +1,12 @@
 .venta-corporativa {
     background-color: #111;
-    color: #0ff; /* celeste neón */
+    color: #0ff;
+    /* celeste neón */
     font-family: 'Orbitron', sans-serif;
     padding: 2rem;
-    border-radius: 12px;
-    box-shadow: 0 0 20px #0ff2;
+    border: 2px solid #0ff;
+    border-radius: 16px;
+    box-shadow: 0 0 20px #00fff2;
     margin: 2rem auto;
     max-width: 800px;
 }
