--- a/css/Styles.css
+++ b/css/Styles.css
@@ -142,6 +142,8 @@ body {
     border-bottom: 2px solid #00ffcc;
 }
 
+
+
 main {
     max-width: 1200px;
     /* o 1000px, según prefieras */
@@ -228,6 +230,13 @@ main {
     flex: 1;
     display: flex;
     justify-content: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 30px;
+    background-color: #000;
+    border-bottom: 1px solid #00f9dc;
+    position: relative;
 }
 
 /* Estilo del menú */
@@ -255,6 +264,71 @@ main {
 .flex-menu li a:hover {
     color: #00ffcc;
 }
+
+.logo-container {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.menu-toggle {
+    font-size: 24px;
+    cursor: pointer;
+    display: none;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 998;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease;
+}
+
+@media (max-width: 768px) {
+    .menu {
+        display: block;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        transform: translateX(-100%);
+        transition: transform 0.5s ease;
+        z-index: 999;
+        background-color: #000;
+    }
+
+    .menu.open {
+        transform: translateX(0);
+    }
+
+    .menu.open~.overlay {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .flex-menu {
+        flex-direction: column;
+        gap: 1rem;
+        padding: 1rem 0;
+    }
+
+    .menu-toggle {
+        display: block;
+    }
+
+    .carrito {
+        order: -1;
+    }
+}
+
+
+
 
 /* Submenú */
 .submenu {
@@ -1108,7 +1182,3 @@ button:hover {
         height: 28px;
     }
 }
-
-
-
-
